fixed visibility button

--- a/src/containers/form/styles.module.css
+++ b/src/containers/form/styles.module.css
@@ -34,6 +34,14 @@ input {
 .submitButton{
   width:400px;
   margin-top: 10px !important;
-  padding: 15px 15px !important
+  padding: 15px 15px !important;
+}
+.closedEyeButton{
+  position:absolute;
+  left: 350px;
+  top: 45px;
+}
+.displayNone{
+  opacity: 0%;
 }
 
